# ai-write-rs

./: .gitignore  Cargo.toml  README.md
src/: bin.rs  lib.rs
